Center/align issues nav, stats, tiles and events components content

--- a/app/assets/stylesheets/redesign/components/_events-news.sass
+++ b/app/assets/stylesheets/redesign/components/_events-news.sass
@@ -1,6 +1,10 @@
 .events-news-component
-  padding: 5%
+  padding: 5% 0
   background: lighten(color('pastel-blue'), 20%)
+
+  .tabs,
+  .tab-content.active
+    margin: 0 7%
 
   .tab
     width: 33.3%
