--- a/app/assets/stylesheets/redesign/components/_stats.sass
+++ b/app/assets/stylesheets/redesign/components/_stats.sass
@@ -1,7 +1,10 @@
 .stats-section
+  @extend %wrapper
   text-align: center
   +font-smoothing(antialiased)
-  +clearfix
+
+  > .wrapper
+    margin: 0 7%
 
   .stat
     float: left
