--- a/app/assets/stylesheets/redesign/components/_tabbed-component.sass
+++ b/app/assets/stylesheets/redesign/components/_tabbed-component.sass
@@ -39,4 +39,5 @@
       position: relative
       background: white
       border: 1px solid #ddd
+      margin: 0
       +clearfix
